--- a/stages_pva.Rmd
+++ b/stages_pva.Rmd
@@ -6,7 +6,6 @@ output: github_document
 editor_options: 
   chunk_output_type: console
 ---
-
 Para este ejercicio son necesarias las librerías **popbio** y **diagram**
 ```{r message=FALSE, warning=FALSE}
 library(diagram)
@@ -103,24 +102,24 @@ lotus_stoch_proj <- stoch.projection (lotus_lista, lotus_n0, tmax=25, nreps=1000
 tail (lotus_stoch_proj)
 ```
 
-La función `tail()`anterior muestra las 6 últimas de las 1000 (`nreps=1000`) proyecciones estocásticas de nuestro conjunto de matrices de *Lotus arinagensis*. Nos muestra el tamaño de cada estadio a los 25 años (`tmax=25`), sometido a variación ambiental. Las fluctuaciones son consecuencia de los distintos valores de las transiciones obtenidos en las tres temporadas de campo, y recogidos en las matrices **lotus_20022003**, **lotus_20032004** y **lotus_20042005**. Por ejemplo, el elemento [4,1] de las matrices indica la probabilidad de transición del estadio *plántula* a *repro3* entre t y t+1, y oscila entre 0 y 0.379. Y en el resultado la abundancia del estadio *plántula* oscila entre 113.7 (repetición 998) y 885.3 (repetición 997) en las 6 últimas repeticiones de la proyección.
+La función `tail()`anterior muestra las 6 últimas de las 1000 (`nreps=1000`) proyecciones estocásticas de nuestro conjunto de matrices de *Lotus arinagensis*. Nos muestra el tamaño de cada estadio a los 25 años (`tmax=25`), sometido a variación ambiental. Las fluctuaciones son consecuencia de los distintos valores de las transiciones obtenidos en las tres temporadas de campo, y recogidos en las matrices **lotus_20022003**, **lotus_20032004** y **lotus_20042005**. Por ejemplo, el elemento `[4,1]` de las matrices indica la probabilidad de transición del estadio *plántula* a *repro3* entre t y t+1, y oscila entre 0 y 0.379. Y en el resultado la abundancia del estadio *plántula* oscila entre 113.7 (repetición 998) y 885.3 (repetición 997) en las 6 últimas repeticiones de la proyección.
 
 La función `set.seed(12345)` es responsable de que todos obtengamos el mismo resultado a pesar de "jugar" con números aleatorios. Le dice al generador de números aleatorios por donde empezar a generar. Es decir, proporciona un código repetible. De no definirlo onbtendríamos un resultado diferente para cada proyección, si bien resultado general será esencialmente el mismo si el número de repeticiones `nreps=` es suficientemente grande.
 
-### Tasa estocástica de crecimiento
+### Tasa estocástica de crecimiento 
 Nos podemos preguntar cómo afecta la estocasticidad ambiental a la tasa de crecimiento lambda. El valor determinista de la misma obtenido con `lambda (lotus_matrix)` era 1.02. la librería **popbio** calcula la tasa de crecimiento estocástico mediante dos aproximaciones, usando la función `stoch.growth.rate()`: 
 
-- A partir de *simulación*, utilizando en cada repetición una de las matrices disponibles en **lotus_lista**, 3 en este caso. 
+- A partir de *simulación*, utilizando en cada repetición una de las 3 matrices disponibles en **lotus_lista**. 
 - *Analítica*, basada en los elementos de esas matrices. Esta se llama *aproximación analítica de Tuljapurkar*. 
 
 Aparecen identificadas como $sim y $aprox en los resultados:
-
 ```{r}
 set.seed(12345)
 (lotus_stoch_r <- stoch.growth.rate (lotus_lista, prob = NULL, maxt = 50 ))
 ```
 
-Esos valores ligeramente inferiores a 0 corresponden en realidad a la tasa intrínseca de crecimiento *r*, o al logaritmo de lambda estocástica; para obtener lambda tenemos que usar *e* elevado a las tasas simulada y analítica, respectivamente. `exp()` es la función que devuelve el resultado de *e^x^*: 
+Esos valores ligeramente inferiores a 0 corresponden en realidad a la tasa intrínseca de crecimiento *r*, o al logaritmo de lambda estocástica; para obtener lambda tenemos que usar $\lambda=e^{r}$. `exp()` es la función que devuelve el resultado de $e^{x}$:
+
 ```{r}
 (lotus_lambda_sim <- exp(lotus_stoch_r$sim))
 (lotus_lambda_anal <- exp(lotus_stoch_r$approx))
