--- a/stages_pva.Rmd
+++ b/stages_pva.Rmd
@@ -1,12 +1,12 @@
 ---
 title: "Estocasticidad en dinámica de poblaciones estructuradas"
-author: "Mario Quevedo"
+author: ""
 date: ""
 output: rmarkdown::github_document
 editor_options: 
   chunk_output_type: console
 ---
-
+$$\lambda$$
 Para este ejercicio son necesarias las librerías **popbio** y **diagram**
 ```{r message=FALSE, warning=FALSE}
 library(diagram)
@@ -20,12 +20,12 @@ La imagen es una captura de pantalla de la información recogida en el Atlas y L
 
 El ejercicio practica la inclusión de la variabilidad ambiental no predecible, *estocasticidad ambiental*, en los modelos de poblaciones estructuradas vistos anteriormente en https://github.com/quevedomario/eco3r/blob/master/stages.md y en https://github.com/quevedomario/eco3r/blob/master/stages2.md  
 
-El modelo está estructurado en 4 estadios, plántulas y 3 clases de reproductores. Introducimos el vector de estadios: 
+El modelo está estructurado en 4 estadios, plántulas y 3 clases de reproductores. Introducimos el vector de estadios, al que llamo arbitrariamente `lotus_stages`; podría llamarse `molly`, pero quizás tendríamos problemas para recordarlo después: 
 ```{r}
 lotus_stages <- c ("plántula", "repro1", "repro2", "repro3")
 ```
 
-Definimos además dos vectores alternativos de abundancias en t = 0, *N~0~*; uno con el mismo número de individuos por estadio, y otro con mayoría del estadio 4, *repro3*:
+Definimos además dos vectores alternativos de abundancias en t = 0, *N~0~*; uno con el mismo número de individuos por estadio, y otro con mayoría del estadio *repro3*:
 ```{r}
 lotus_n0 <- c (100,100,100,100)
 lotus_n0_alt <- c(10,10,10,370)
@@ -105,28 +105,28 @@ tail (lotus_stoch_proj)
 
 La función `tail()`anterior muestra las 6 últimas de las 1000 (`nreps=1000`) proyecciones estocásticas de nuestro conjunto de matrices de *Lotus arinagensis*. Nos muestra el tamaño de cada estadio a los 25 años (`tmax=25`), sometido a variación ambiental. Las fluctuaciones son consecuencia de los distintos valores de las transiciones obtenidos en las tres temporadas de campo, y recogidos en las matrices **lotus_20022003**, **lotus_20032004** y **lotus_20042005**. Por ejemplo, el elemento `[4,1]` de las matrices indica la probabilidad de transición del estadio *plántula* a *repro3* entre t y t+1, y oscila entre 0 y 0.379. Y en el resultado la abundancia del estadio *plántula* oscila entre 113.7 (repetición 998) y 885.3 (repetición 997) en las 6 últimas repeticiones de la proyección.
 
-La función `set.seed(12345)` es responsable de que todos obtengamos el mismo resultado a pesar de "jugar" con números aleatorios. Le dice al generador de números aleatorios por donde empezar a generar. Es decir, proporciona un código repetible. De no definirlo onbtendríamos un resultado diferente para cada proyección, si bien resultado general será esencialmente el mismo si el número de repeticiones `nreps=` es suficientemente grande.
+La función `set.seed(12345)` es responsable de que todos obtengamos el mismo resultado a partir dde este guión, a pesar de "jugar" con números aleatorios. Le dice al generador de números aleatorios por donde empezar a generar. Es decir, proporciona un código repetible. De no definirlo onbtendríamos un resultado diferente para cada proyección, si bien resultado general será esencialmente el mismo si el número de repeticiones `nreps=` es suficientemente grande.
 
 ### Tasa estocástica de crecimiento 
 Nos podemos preguntar cómo afecta la estocasticidad ambiental a la tasa asintótica de crecimiento, lambda. El valor determinista de la misma obtenido con `lambda (lotus_matrix)` era 1.02. la librería **popbio** calcula la tasa de crecimiento estocástico mediante dos aproximaciones, usando la función `stoch.growth.rate()`: 
 
-- A partir de *simulación*, utilizando en cada repetición una de las 3 matrices disponibles en **lotus_lista**. 
 - *Analítica*, basada en los elementos de esas matrices. Esta se llama *aproximación analítica de Tuljapurkar*. 
+- *Simulada*, utilizando en cada repetición una de las 3 matrices disponibles en **lotus_lista**. 
 
-Aparecen identificadas como `$sim` y `$aprox` en los resultados:
+Aparecen identificadas como `$aprox` y `$sim` en los resultados:
 ```{r}
 set.seed(12345)
 (lotus_stoch_r <- stoch.growth.rate (lotus_lista, prob = NULL, maxt = 50 ))
 ```
 
-Esos valores ligeramente inferiores a 0 corresponden en realidad a la tasa intrínseca de crecimiento *r*, o al logaritmo de lambda estocástica; para obtener lambda tenemos que usar lambda = e^r^. `exp()` es la función que devuelve el resultado de e^x^:
+Esos valores próximos a 0 corresponden en realidad a la tasa intrínseca de crecimiento *r*, o a ![](stages_pva_files/figure-gfm/lnlambda.jpg); para obtener lambda tenemos que usar ![](stages_pva_files/figure-gfm/lambda_e_r.jpg). `exp()` es la función que devuelve el resultado de e^x^:
 
 ```{r}
 (lotus_lambda_sim <- exp(lotus_stoch_r$sim))
 (lotus_lambda_anal <- exp(lotus_stoch_r$approx))
 ```
 
-Con cualquiera de las aproximaciones a la influencia de la variabilidad ambiental en la *tasa asintótica de crecimiento lambda* obtenemos valores inferiores a la *lambda determinista (1.02)*. En este caso de hecho la incorporación de la estocasticidad deja lambda por debajo de 1, es decir, **indica una tendencia decreciente**; el intervalo de confianza para la tasa estocástica simulada, `$sim.CI` en el resultado de `stoch_growth_rate()`, en ambos extremos menor que 0, la confirma.
+`$sim.CI` en el resultado de la tasa estocástica de crecimiento muestra el intervalo de confianza para la *r* estocástica simulada (la analítica es un valor único derivado de la matriz), en este caso incluyendo 0 en el centro de la distribución de valores; indica una población con una lambda estocástica esencialmente igual a 1.
 
 ### Elasticidades
 En el ejercicio previo [de análisis exclusivamente determinista](https://github.com/quevedomario/eco3r/blob/master/stages.md) veíamos que la salida de `eigen.analysis()` incluía sensibilidades y elasticidades. La **elasticidad** de un elemento de la matriz de transición es el cambio proporcional en lambda que resulta de un cambio en ese elemento de la matriz. Las elasticidades indican *a priori* qué elementos de la matriz son **más determinantes para la dinámica de la población**.
