--- a/stages_pva.Rmd
+++ b/stages_pva.Rmd
@@ -20,6 +20,7 @@ La imagen es una captura de pantalla de la información recogida en el Atlas y L
 
 El ejercicio practica la inclusión de la variabilidad ambiental no predecible, *estocasticidad ambiental*, en los modelos de poblaciones estructuradas vistos anteriormente en https://github.com/quevedomario/eco3r/blob/master/stages.md y en https://github.com/quevedomario/eco3r/blob/master/stages2.md  
 
+#### Construcción del modelo
 El modelo está estructurado en 4 estadios, plántulas y 3 clases de reproductores. Introducimos el vector de estadios, al que llamo arbitrariamente `lotus_stages`; podría llamarse `molly`, pero quizás tendríamos problemas para recordarlo después: 
 ```{r}
 lotus_stages <- c ("plántula", "repro1", "repro2", "repro3")
@@ -46,6 +47,7 @@ Y construimos la matriz de transición combinando estadios y transiciones:
 lotus_matrix <- matrix2(lotus_trans, lotus_stages)
 ```
 
+#### Esquema del ciclo de vida
 Una vez definido el modelo de la población, podemos empezar a extraerle información. Por ejemplo, dibujando el ciclo de vida de *L. arinagensis* con la función `plotmat()`. Puede pareer complicada porque presenta muchos ajustes posibles (e.g. muchos *argumentos*), que determinarán el aspecto final del gráfico:
 ```{r}
 plotmat(lotus_matrix, relsize =.86, self.cex = 0.5, self.shifty=0.051,
@@ -58,6 +60,7 @@ Podemos obtener explicación de cómo trabajan esos argumentos con `?plotmat`.
 
 El ciclo de vida facilita la interpretación visual de las transiciones observadas en la población, y de las diferencias dentro de la misma: algunos individuos permanecen en el mismo estadio entre t y t + 1; otros regresan a estadios anteriores; y otros se "saltan" estadios en el crecimiento. Esas peculiaridades, especialmente habituales en organismos modulares con modelos basados en tamaño o estadio reproductor, se modelan eficientemente con estas matrices.   
 
+#### Cálculos deterministas {#lambda}
 Los cálculos deterministas se extraerían de manera análoga a la vista en ejercicios anteriores (https://github.com/quevedomario/eco3r/blob/master/stages.md y https://github.com/quevedomario/eco3r/blob/master/stages2.md), desde los cuales es fácil adaptar el código.
 
 Por ahora con obtener lambda es suficiente, para compararla con los resultados que incorporen estocasticidad más adelante:
@@ -65,8 +68,8 @@ Por ahora con obtener lambda es suficiente, para compararla con los resultados q
 lambda (lotus_matrix)
 ```
 
+#### Variabilidad en tasas vitales
 Para incorporar estocasticidad ambiental una posibilidad es contar con información sobre la variación de las tasas vitales de la matriz de transición. En este caso disponemos de datos de tres temporadas de campo, tres matrices anuales^1^. La matriz de transición anterior, **lotus_matrix**, es una matriz promedio de las siguientes:
-
 ```{r}
 lotus_20022003 <- matrix(c(
   0.000, 0.496, 0.972, 1.743,
@@ -95,7 +98,7 @@ Una vez introducidas en la memoria de la sesión de R, combinamos las tres matri
 lotus_lista <- list(lotus_20022003, lotus_20032004, lotus_20042005)
 ```
 
-### Proyección estocástica
+#### Proyección estocástica
 A continuación podemos simular el crecimiento bajo influencia de estocásticidad ambiental, con la función `stoch.projection()`. Esta requiere 2 o más matrices de proyección (tenemos 3); es decir, requiere tener información sobre la variación en las tasas vitales. 
 
 El resultado de la *proyección estocástica* lo almacenamos en un objeto **lotus_stoch_proj**. Los argumentos de la función son el tiempo de proyección `tmax=` y el número de repeticiones `nreps=`:
@@ -109,7 +112,7 @@ La función `tail()`anterior muestra las 6 últimas de las 1000 (`nreps=1000`) p
 
 La función `set.seed(12345)` es responsable de que todos obtengamos el mismo resultado a partir dde este guión, a pesar de "jugar" con números aleatorios. Le dice al generador de números aleatorios por donde empezar a generar. Es decir, proporciona un código repetible. De no definirlo onbtendríamos un resultado diferente para cada proyección, si bien resultado general será esencialmente el mismo si el número de repeticiones `nreps=` es suficientemente grande.
 
-### Tasa estocástica de crecimiento 
+#### Tasa estocástica de crecimiento 
 Nos podemos preguntar cómo afecta la estocasticidad ambiental a la tasa asintótica de crecimiento, lambda. El valor determinista de la misma obtenido con `lambda (lotus_matrix)` era 1.02. La librería **popbio** calcula la tasa de crecimiento estocástico usando la función `stoch.growth.rate()`, y devuelve dos aproximaciones: 
 
 - *Analítica*, basada en los elementos de esas matrices. Esta se llama *aproximación analítica de Tuljapurkar*. 
@@ -130,8 +133,8 @@ Esos valores próximos a 0 corresponden en realidad a la tasa intrínseca de cre
 
 `$sim.CI` en el resultado de la tasa estocástica de crecimiento muestra el intervalo de confianza para la *r* estocástica simulada (la analítica es un valor único derivado de la matriz), en este caso incluyendo 0 en el centro de la distribución de valores; indica una población con una lambda estocástica esencialmente igual a 1.
 
-### Elasticidades
-En el ejercicio previo [de análisis exclusivamente determinista](https://github.com/quevedomario/eco3r/blob/master/stages.md) veíamos que la salida de `eigen.analysis()` incluía sensibilidades y elasticidades. La **elasticidad** de un elemento de la matriz de transición es el cambio proporcional en lambda que resulta de un cambio en ese elemento de la matriz. Las elasticidades indican *a priori* qué elementos de la matriz son **más determinantes para la dinámica de la población**.
+#### Elasticidades
+En el ejercicio previo (Ctrl. click para abrir en una pestaña nueva) [de análisis exclusivamente determinista](https://github.com/quevedomario/eco3r/blob/master/stages.md) veíamos que la salida de `eigen.analysis()` incluía sensibilidades y elasticidades. La **elasticidad** de un elemento de la matriz de transición es el cambio proporcional en lambda que resulta de un cambio en ese elemento de la matriz. Las elasticidades indican *a priori* qué elementos de la matriz son **más determinantes para la dinámica de la población**.
 
 La obtenemos con la función `stoch.sens()`:
 ```{r}
@@ -152,7 +155,7 @@ El código implica 10 ejecuciones `maxruns=` separadas de la estima de probabili
 mean(lotus_sqe[25,]); sd(lotus_sqe[25,])
 ```
 
-Es decir, pedimos la media y desviación estándar de la probabilidad de que N~t~ < N~x~ en el año 25 de cada una de las 10 ejecuciones. A pesar de que la tasa asintótica determinista era 1.02, teniendo en cuenta la variabilidad ambiental reflejada en las tres matrices ed 2002 a 2005, tenemos una probabilidad superior al 10% de que la población disminuya por debajo de 50 individuos en 25 años.
+Es decir, pedimos la media y desviación estándar de la probabilidad de que N~t~ < N~x~ en el año 25 de cada una de las 10 ejecuciones. A pesar de que la [tasa de crecimiento determinista](#lambda) era 1.02, teniendo en cuenta la variabilidad ambiental reflejada en las tres matrices ed 2002 a 2005, tenemos una probabilidad superior al 10% de que la población disminuya por debajo de 50 individuos en 25 años.
 
 Para terminar, usamos aquello de que una imagen vale más que mil palabras, también en el contexto de análisis de viabilidad de poblaciones:
 ```{r}
@@ -161,7 +164,7 @@ matplot (lotus_sqe, xlab="Años", ylab=expression(P[cuasi-extinción]),
 ```
 
 
-### Enlaces, referencias, anotaciones de código
+#### Enlaces y referencias
 Para abrir los enlaces en otra pestaña, *botón derecho + abrir en nueva pestaña*, o *Ctrl click*)  
 1. Datos incluidos en Iriondo et al. (Eds). 2009. [Poblaciones en peligro: viabilidad demográfica de la flora vascular amenazada de España. Madrid: Ministerio de Medio Ambiente, y Medio Rural y Marino](https://www.miteco.gob.es/es/biodiversidad/temas/inventarios-nacionales/viabilidaddemografica_tcm30-99752.pdf)
   
